--- a/templates/addresses/chat_test.html
+++ b/templates/addresses/chat_test.html
@@ -19,8 +19,7 @@
 </style>
 <body>
 <div class="chat_header">
-    <span>EBS 3학년 뉴런 질문-답변 기반 챗봇</span>
-    <span>질문을 입력하면 가장 유사한 질문을 찾아서 답변을 찾아줍니다. 너무 짧게 질문하거나 데이터로 삼은 2200개 질문 중에 유사한 게 없으면 엉뚱한 소리를 합니다. 그래도 귀엽게 봐주시고 모르는 건 클래스팅 댓글이나 1:1 채팅으로 질문하세요. ㅎㅎㅎ</span>
+    <span>EBS 3학년 뉴런 질문-답변 기반 챗봇 - 질문을 입력하면 가장 유사한 질문을 찾아서 답변을 찾아줍니다. 너무 짧게 질문하거나 데이터로 삼은 2200개 질문 중에 유사한 게 없으면 엉뚱한 소리를 합니다. 그래도 귀엽게 봐주시고 모르는 건 클래스팅 댓글이나 1:1 채팅으로 질문하세요. ㅎㅎㅎ</span>
     <button type="button" id="close_chat_btn" class="close_btn">X</button>
 </div>
 <div id="divbox" class="chat_content"></div>
