채팅 화면 크기 조정

--- a/templates/addresses/chat_test.html
+++ b/templates/addresses/chat_test.html
@@ -3,11 +3,11 @@
 <script type="text/javascript" src="/static/jquery-3.2.1.min.js"></script>
 <head>
     <meta charset="UTF-8">
-    <title>시흥은행중학교 3학년 과학 EBS 질문-답변 데이로 만든 챗봇</title>
+    <title>시흥은행중학교 3학년 과학: EBS 뉴런 질문-답변 데이터로 만든 챗봇</title>
 </head>
 <style>
 .chat_wrap {display:none;width: 350px;height: 500px;position: fixed;bottom: 30px;right: 95px;background: #a9bdce;}
-.chat_content {height: 600px;width: 500px;overflow-y:scroll;padding:10px 15px;background: cornflowerblue}
+.chat_content {height: 500px;width: 500px;overflow-y:scroll;padding:10px 15px;background: cornflowerblue}
 .chat_input {padding:2px 5px;}
 .chat_header {padding: 10px 15px;border-bottom: 1px solid #95a6b4;}
 .chat_header .close_btn {border: none;background: none;float: right;}
@@ -19,7 +19,7 @@
 </style>
 <body>
 <div class="chat_header">
-    <span>EBS 3학년 뉴런 질문-답변 기반 챗봇 - 질문을 입력하면 가장 유사한 질문을 찾아서 답변을 찾아줍니다. 너무 짧게 질문하거나 데이터로 삼은 2200개 질문 중에 유사한 게 없으면 엉뚱한 소리를 합니다. 그래도 귀엽게 봐주시고 모르는 건 클래스팅 댓글이나 1:1 채팅으로 질문하세요. ㅎㅎㅎ</span>
+    <span>질문을 입력하면 가장 유사한 질문을 찾아서 답변을 찾아줍니다. 너무 짧게 질문하거나 2290개 질문-답변 중 유사한 게 없으면 엉뚱한 소리를 합니다. 그래도 귀엽게 봐주시고 모르는 건 클래스팅 댓글이나 1:1 채팅으로 질문하세요. ㅎㅎㅎ</span>
     <button type="button" id="close_chat_btn" class="close_btn">X</button>
 </div>
 <div id="divbox" class="chat_content"></div>
