--- a/templates/addresses/chat_test.html
+++ b/templates/addresses/chat_test.html
@@ -3,7 +3,7 @@
 <script type="text/javascript" src="/static/jquery-3.2.1.min.js"></script>
 <head>
     <meta charset="UTF-8">
-    <title>시흥은행중학교 3학년 과학: EBS 뉴런 질문-답변 데이터로 만든 챗봇</title>
+    <title>시흥은행중학교 3학년 과학 질문-답변 만든 챗봇 (7/19에 많이 업데이트함)</title>
 </head>
 <style>
 .chat_wrap {display:none;width: 350px;height: 500px;position: fixed;bottom: 30px;right: 95px;background: #a9bdce;}
