방학 전 챗봇 업데이트 (데이터 4272개, 웹페이지 제목 업데이트) 20200902

--- a/templates/addresses/chat_test.html
+++ b/templates/addresses/chat_test.html
@@ -3,7 +3,7 @@
 <script type="text/javascript" src="/static/jquery-3.2.1.min.js"></script>
 <head>
     <meta charset="UTF-8">
-    <title>시흥은행중학교 3학년 과학 질문-답변 만든 챗봇 (8/30에 2학기 맞이 업데이트)</title>
+    <title>시흥은행중학교 3학년 과학 질문-답변 챗봇 (8/30에 2학기 맞이 업데이트)</title>
 </head>
 <style>
 .chat_wrap {display:none;width: 350px;height: 500px;position: fixed;bottom: 30px;right: 95px;background: #a9bdce;}
