--- a/templates/addresses/chat_test.html
+++ b/templates/addresses/chat_test.html
@@ -19,7 +19,7 @@
 </style>
 <body>
 <div class="chat_header">
-    <span>질문을 입력하면 챗봇이 가장 유사한 질문을 찾아서 답변을 출력합니다. 너무 짧게 질문하거나 약 4350개 질문-답변 중 유사한 게 없으면 엉뚱한 소리를 합니다. 챗봇으로 해결이 안 되면 건 클래스팅 댓글이나 1:1 채팅으로 질문하세요. 질문 등의 데이터만 수집하고 개인정보를 전혀 기록되지 않아요.</span>
+    <span>질문을 입력하면 챗봇이 가장 유사한 질문을 찾아서 답변을 출력합니다. 너무 짧게 질문하거나 약 4350개 질문-답변 중 유사한 게 없으면 엉뚱한 소리를 합니다. 챗봇으로 해결이 안 되면 건 클래스팅 댓글이나 1:1 채팅으로 질문하세요. 질문 등의 데이터만 수집하고 개인정보는 전혀 기록하지 않아요.</span>
     <button type="button" id="close_chat_btn" class="close_btn">X</button>
 </div>
 <div id="divbox" class="chat_content"></div>
