--- a/templates/addresses/chat_test.html
+++ b/templates/addresses/chat_test.html
@@ -3,7 +3,7 @@
 <script type="text/javascript" src="/static/jquery-3.2.1.min.js"></script>
 <head>
     <meta charset="UTF-8">
-    <title>시흥은행중학교 3학년 과학 질문-답변 챗봇 (9/3 업데이트)</title>
+    <title>시흥은행중학교 3학년 과학 질문-답변 챗봇 (9/7 업데이트)</title>
     <link rel="shortcut icon" href="favicon.ico"/>
 </head>
 <style>
@@ -20,7 +20,7 @@
 </style>
 <body>
 <div class="chat_header">
-    <span>질문을 입력하면 챗봇이 가장 유사한 질문을 찾아서 답변을 출력합니다. 여러분이 질문을 많이 할수록 성능이 좋아집니다. 질문하시면 제가 시간 날 때나 주말에 업데이트 해요. 챗봇으로 해결이 안 되면 건 클래스팅 댓글이나 1:1 채팅으로 질문하세요. 질문 등의 데이터만 수집하고 개인정보는 전혀 기록하지 않아요.</span>
+    <span>질문을 입력하면 챗봇이 가장 유사한 질문을 찾아서 답변을 출력합니다. 여러분이 질문을 많이 할수록 성능이 좋아집니다. 질문하시면 제가 시간 날 때 틈틈이 업데이트해요. 챗봇으로 해결이 안 되면 건 클래스팅 댓글이나 1:1 채팅으로 질문하세요. 질문과 시각만 수집하고 개인정보는 전혀 기록하지 않아요.</span>
     <button type="button" id="close_chat_btn" class="close_btn">X</button>
 </div>
 <div id="divbox" class="chat_content"></div>
