챗봇 업데이트 10 (EBS 데이터 240개 추가) 20200916

--- a/templates/addresses/chat_test.html
+++ b/templates/addresses/chat_test.html
@@ -49,7 +49,7 @@
             dataType: 'json',
             data: $('form').serialize(),
             success: function(data) {
-                <!--$('#reponse').html(data.reponse);-->
+                <!--$('#reponse').html(data.response);-->
                 $('#divbox').append('<div class="msg_box receive"><span>'+ data.response +'<span></div>');
                 $("#divbox").scrollTop($("#divbox")[0].scrollHeight);
             }
