--- a/templates/addresses/chat_test.html
+++ b/templates/addresses/chat_test.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <script type="text/javascript" src="/static/jquery-3.2.1.min.js"></script>
 <head>
     <meta charset="UTF-8">
