--- a/templates/addresses/chat_test.html
+++ b/templates/addresses/chat_test.html
@@ -3,7 +3,7 @@
 <script type="text/javascript" src="/static/jquery-3.2.1.min.js"></script>
 <head>
     <meta charset="UTF-8">
-    <title>시흥은행중학교 3학년 과학 질문-답변 챗봇 (9/17 업데이트)</title>
+    <title>시흥은행중학교 3학년 과학 질문-답변 챗봇 (9/28 아침 업데이트)</title>
     <link rel="shortcut icon" href="favicon.ico"/>
 </head>
 <style>
