--- a/templates/addresses/chat_test.html
+++ b/templates/addresses/chat_test.html
@@ -3,8 +3,8 @@
 <script type="text/javascript" src="/static/jquery-3.2.1.min.js"></script>
 <head>
     <meta charset="UTF-8">
-    <title>시흥은행중학교 3학년 과학 질문-답변 챗봇 (9/28 등교수업 때 들어온 질문 1주일치 업데이트)</title>
-    <link rel="shortcut icon" href="favicon.ico"/>
+    <title>시흥은행중학교 3학년 과학 질문-답변 챗봇 (9/29 어제 들어온 질문 100개와 EBS 질문 150개 추가)</title>
+    <link rel="shortcut icon" href="/static/favicon.ico"/>
 </head>
 <style>
 .chat_wrap {display:none;width: 350px;height: 500px;position: fixed;bottom: 30px;right: 95px;background: #a9bdce;}
