--- a/templates/addresses/chat_test.html
+++ b/templates/addresses/chat_test.html
@@ -3,19 +3,19 @@
 <script type="text/javascript" src="/static/jquery-3.2.1.min.js"></script>
 <head>
     <meta charset="UTF-8">
-    <title>시흥은행중학교 3학년 과학 질문-답변 챗봇 (10/6 업데이트: 어제 들어온 질문 20개 추가)</title>
+    <title>시흥은행중학교 3학년 과학 질문-답변 챗봇 (테스트 중 20210124)</title>
 </head>
 <style>
-.chat_wrap {display:none;width: 350px;height: 500px;position: fixed;bottom: 30px;right: 95px;background: #a9bdce;}
-.chat_content {height: 500px;width: 500px;overflow-y:scroll;padding:10px 15px;background: cornflowerblue}
-.chat_input {padding:2px 5px;}
-.chat_header {padding: 10px 15px;border-bottom: 1px solid #95a6b4;}
-.chat_header .close_btn {border: none;background: none;float: right;}
-.send_btn {;border: 1px solid #666;background: #ffeb33;height: 28px;color: #0a0a0a;}
-.msg_box:after {content: '';display: block;clear:both;}
-.msg_box > span {padding: 3px 5px;word-break: break-all;display: block;max-width: 300px;margin-bottom: 10px;border-radius: 4px}
-.msg_box.send > span {background:#ffeb33;float: right;}
-.msg_box.receive > span {background:#fff;float: left;}
+    .chat_wrap {display:none; width:350px; height:500px; position:fixed; bottom:30px; right:95px; background:#a9bdce;}
+    .chat_content {height:500px; width:500px; overflow-y:scroll; padding:10px 15px; background:cornflowerblue}
+    .chat_input {padding:2px 5px;}
+    .chat_header {padding:10px 15px; border-bottom:1px solid #95a6b4;}
+    .chat_header .close_btn {border:none; background:none; float:right;}
+    .send_btn {;border:1px solid #666; background:#ffeb33; height:28px; color:#0a0a0a;}
+    .msg_box:after {content:''; display:block; clear:both;}
+    .msg_box > span {padding:3px 5px; word-break:break-all; display:block; max-width:300px; margin-bottom:10px; border-radius:4px}
+    .msg_box.send > span {background:#ffeb33; float:right;}
+    .msg_box.receive > span {background:#fff; float:left;}
 </style>
 <body>
 <div class="chat_header">
