테스트 중 20210130 (chat_wrap ID 만들어서 없애는 거 테스 2)

--- a/templates/addresses/chat_test.html
+++ b/templates/addresses/chat_test.html
@@ -36,7 +36,9 @@
        send();
     });
     $('#close_chat_btn').on('click', function(){
-        $('#chat_wrap').hide().empty();
+        $('.chat_header').hide().empty();
+        // $('#chat_wrap').hide().empty();
+        // $('#chat_wrap').hide().empty();
     });
     function send(){
         $('#divbox').append('<div class="msg_box send"><span>'+$('#input1').val()+'<span></div>');
