테스트 중 20210130 (답변 개행 3 <br/>)

--- a/templates/addresses/chat_test.html
+++ b/templates/addresses/chat_test.html
@@ -19,7 +19,7 @@
 </style>
 <body>
 <div class="chat_header">
-    <span id="chat_wrap">여러분이 질문을 많이 할수록 성능이 좋아집니다. 질문하시면 제가 시간 날 때 틈틈이 업데이트해요. 챗봇으로 해결이 안 되면 건 클래스팅 댓글이나 1:1 채팅으로 질문하세요. 질문과 시각만 수집하고 개인정보는 전혀 기록하지 않아요.</span>
+    <span>여러분이 질문을 많이 할수록 성능이 좋아집니다. 질문하시면 제가 시간 날 때 틈틈이 업데이트해요. 챗봇으로 해결이 안 되면 건 클래스팅 댓글이나 1:1 채팅으로 질문하세요. 질문과 시각만 수집하고 개인정보는 전혀 기록하지 않아요.</span>
     <button type="button" id="close_chat_btn" class="close_btn">X</button>
 </div>
 <div id="divbox" class="chat_content"></div>
