--- a/templates/addresses/chat_test.html
+++ b/templates/addresses/chat_test.html
@@ -48,7 +48,7 @@
             dataType: 'json',
             data: $('form').serialize(),
             success: function(data) {
-                <!--$('#response').html(data.response);-->
+                $('#response').html(data.response);
                 $('#divbox').append('<div class="msg_box receive"><span>'+ data.response +'<span></div>');
                 $("#divbox").scrollTop($("#divbox")[0].scrollHeight);
             }
