--- a/templates/addresses/chat_test.html
+++ b/templates/addresses/chat_test.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>시흥은행중학교 3학년 과학 질문-답변 챗봇 (테스트 중 20210131)</title>
-    <link rel="icon" href="/static/favicon.ico"
+    <link rel="icon" href="/static/favicon.ico">
 </head>
 <style>
     .chat_wrap {display:none; width:500px; height:500px; position:fixed; bottom:30px; right:95px; background:#a9bdce;}
