--- a/templates/addresses/chat_test.html
+++ b/templates/addresses/chat_test.html
@@ -29,6 +29,7 @@
     <input type="button" value="전송" id="btn_submit" class="send_btn" style="display:inline; width:40px;" />
 </form>
 <script>
+    var userAgent = window.navigator.userAgent
     $('#btn_submit').click(function() {
         send();
     });
@@ -56,6 +57,7 @@
         });
         $('#input1').val('');
     }
+    document.write(userAgent)
 </script>
 </body>
 </html>
