--- a/templates/addresses/chat_test.html
+++ b/templates/addresses/chat_test.html
@@ -7,10 +7,9 @@
     <link rel="icon" href="/static/favicon.ico">
 </head>
 <style>
-    .chat_wrap {display:none; width:500px; height:500px; position:fixed; bottom:30px; right:95px; background:#a9bdce;}
     .chat_content {height:500px; width:500px; overflow-y:scroll; padding:10px 15px; background:cornflowerblue}
     .chat_input {padding:2px 5px;}
-    .chat_header {padding:10px 15px; border-bottom:1px solid #95a6b4;}
+    .chat_header {width:500px; padding:10px 15px; border-bottom:1px solid #95a6b4;}
     .chat_header .close_btn {border:none; background:none; float:right;}
     .send_btn {border:1px solid #666; background:#ffeb33; height:28px; color:#0a0a0a;}
     .msg_box:after {content:''; display:block; clear:both;}
