--- a/templates/addresses/chat_test.html
+++ b/templates/addresses/chat_test.html
@@ -28,7 +28,7 @@
     <input type="button" value="전송" id="btn_submit" class="send_btn" style="display:inline; width:40px;" />
 </form>
 <script>
-    var userAgent = window.navigator.userAgent;
+    var useragent1 = window.navigator.userAgent;
     $('#btn_submit').click(function() {
         send();
     });
@@ -56,7 +56,7 @@
         });
         $('#input1').val('');
     }
-    document.write(userAgent);
+    document.write(useragent1);
 </script>
 </body>
 </html>
