--- a/templates/addresses/chat_test.html
+++ b/templates/addresses/chat_test.html
@@ -28,6 +28,7 @@
     <input type="button" value="전송" id="btn_submit" class="send_btn" style="display:inline; width:40px;" />
 </form>
 <script>
+{#테스트#}
     var useragent1 = window.navigator.userAgent;
     $('#btn_submit').click(function() {
         send();
