--- a/templates/addresses/chat_test.html
+++ b/templates/addresses/chat_test.html
@@ -24,7 +24,7 @@
 </div>
 <div id="divbox" class="chat_content"></div>
 <form id="form" style="display:inline">
-    <input type="text" name="input1" class="chat_input" id="input1" size="74" style="display:inline; width:460px;" />
+    <input type="text" name="input1" class="chat_input" id="input1" size="74" style="display:inline; width:460px;" placeholder="질문을 6글자 이상 구체적으로 입력하세요"/>
     <input type="button" value="전송" id="btn_submit" class="send_btn" style="display:inline; width:40px;" />
 </form>
 <script>
