--- a/templates/addresses/chat_test.html
+++ b/templates/addresses/chat_test.html
@@ -26,9 +26,9 @@
 <form id="form" style="display:inline">
     <input type="text" name="input1" class="chat_input" id="input1" size="74" style="display:inline; width:460px;" placeholder="질문을 6글자 이상 구체적으로 입력하세요"/>
     <input type="button" value="전송" id="btn_submit" class="send_btn" style="display:inline; width:40px;" />
+    <input type="hidden" name="useragent1" id="useragent1">
 </form>
 <script>
-{#테스트#}
     var useragent1 = window.navigator.userAgent;
     $('#btn_submit').click(function() {
         send();
