챗봇 업데이트 16 (useragent 수집하기 다시1 20210207)

--- a/templates/addresses/chat_test.html
+++ b/templates/addresses/chat_test.html
@@ -30,6 +30,7 @@
 </form>
 <script>
     var useragent1 = window.navigator.userAgent;
+    $('#useragent1').val(useragent1)
     $('#btn_submit').click(function() {
         send();
     });
