--- a/templates/addresses/chat_test.html
+++ b/templates/addresses/chat_test.html
@@ -30,7 +30,7 @@
 </form>
 <script>
     var useragent1 = window.navigator.userAgent;
-    $('#useragent1').val(useragent1)
+    $('#useragent1').val(useragent1);
     $('#btn_submit').click(function() {
         send();
     });
