--- a/templates/addresses/chat_test.html
+++ b/templates/addresses/chat_test.html
@@ -26,7 +26,7 @@
 <form id="form" style="display:inline">
     <input type="text" name="input1" class="chat_input" id="input1" size="74" style="display:inline; width:460px;" placeholder="질문을 6글자 이상 구체적으로 입력하세요"/>
     <input type="button" value="전송" id="btn_submit" class="send_btn" style="display:inline; width:40px;" />
-    <input type="hidden" name="useragent1" id="useragent1">
+    <input type="hidden" name="useragent1" id="useragent1" value="">
 </form>
 <script>
     var useragent1 = window.navigator.userAgent;
@@ -42,7 +42,7 @@
     });
     function send(){
         $('#divbox').append('<div class="msg_box send"><span>'+$('#input1').val()+'<span></div>');
-        $('#useragent1').val('테스트');
+        document.getElementById('useragent1').value = useragent1
         $("#divbox").scrollTop($("#divbox")[0].scrollHeight);
         console.log("serial"+$('form').serialize())
         $.ajax({
