--- a/templates/addresses/chat_test.html
+++ b/templates/addresses/chat_test.html
@@ -3,7 +3,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <head>
     <meta charset="UTF-8">
-    <title>시흥은행중학교 3학년 과학 질문-답변 챗봇 (테스트 중 20210131)</title>
+    <title>시흥은행중학교 3학년 과학 질문-답변 챗봇 (테스트 중 20210207)</title>
     <link rel="icon" href="/static/favicon.ico">
 </head>
 <style>
@@ -24,7 +24,7 @@
 </div>
 <div id="divbox" class="chat_content"></div>
 <form id="form" style="display:inline">
-    <input type="text" name="input1" class="chat_input" id="input1" size="74" style="display:inline; width:460px;" placeholder="질문을 6글자 이상 구체적으로 입력하세요"/>
+    <input type="text" name="input1" class="chat_input" id="input1" size="74" style="display:inline; width:460px;" placeholder="질문을 6글자 이상 최대한 자세하게 쓰세요"/>
     <input type="button" value="전송" id="btn_submit" class="send_btn" style="display:inline; width:40px;" />
     <input type="hidden" name="useragent1" id="useragent1" value="">
 </form>
