챗봇 업데이트 17 (favicon.ico 설정 20210215)

--- a/templates/addresses/chat_test.html
+++ b/templates/addresses/chat_test.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>시흥은행중학교 3학년 과학 질문-답변 챗봇 (테스트 중 20210207)</title>
-    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
+    <link rel="shortcut icon" type="image/png" href="{% static 'static/favicon.ico' %}"/>
 </head>
 <style>
     .chat_content {height:500px; width:500px; overflow-y:scroll; padding:10px 15px; background:cornflowerblue}
