--- a/templates/addresses/chat_web.html
+++ b/templates/addresses/chat_web.html
@@ -1,17 +1,37 @@
+<!DOCTYPE html>
+<html lang="ko">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <title>시흥은행중학교 3학년 과학 질문-답변 챗봇 (테스트 중 20210207)</title>
+    {% load static %}
+    <link rel="shortcut icon" type="image/png" href="{% static '/favicon.ico' %}"/>
+</head>
+<style>
+    .chat_content {height:500px; width:500px; overflow-y:scroll; padding:10px 15px; background:cornflowerblue}
+    .chat_input {padding:2px 5px;}
+    .chat_header {width:500px; padding:10px 15px; border-bottom:1px solid #95a6b4;}
+    .chat_header .close_btn {border:none; background:none; float:right;}
+    .send_btn {border:1px solid #666; background:#ffeb33; height:28px; color:#0a0a0a;}
+    .msg_box:after {content:''; display:block; clear:both;}
+    .msg_box > span {padding:3px 5px; word-break:break-all; display:block; max-width:300px; margin-bottom:10px; border-radius:4px}
+    .msg_box.send > span {background:#ffeb33; float:right;}
+    .msg_box.receive > span {background:#fff; float:left;}
+</style>
+<body>
 <div class="chat_header">
-    <span>테스트 뉴스 전송</span>
+    <span>여러분이 질문을 많이 할수록 성능이 좋아집니다. 질문하시면 제가 시간 날 때 틈틈이 업데이트해요. 챗봇으로 해결이 안 되면 건 클래스팅 댓글이나 1:1 채팅으로 질문하세요. 질문과 시각만 수집하고 개인정보는 전혀 기록하지 않아요.</span>
     <button type="button" id="close_chat_btn" class="close_btn">X</button>
 </div>
 <div id="divbox" class="chat_content"></div>
-<form id="form">
-{#        {% csrf_token %}#}
-    <input type="text" name="input1" class="chat_input" id="input1" size="74"/>
-    <!-- <input type="text" name="input2" /> -->
-    <!-- <input type="submit" name="전송" /> -->
-    <input type="button" value="전송" id="btn_submit" class="send_btn" />
+<form id="form" style="display:inline">
+    <input type="text" name="input1" class="chat_input" id="input1" size="74" style="display:inline; width:460px;" placeholder="질문을 6글자 이상 최대한 자세하게 쓰세요"/>
+    <input type="button" value="전송" id="btn_submit" class="send_btn" style="display:inline; width:40px;" />
+    <input type="hidden" name="useragent1" id="useragent1" value="">
 </form>
 <script>
-    $('#btn_submit').click(function () {
+    var useragent1 = window.navigator.userAgent;
+    $('#btn_submit').click(function() {
         send();
     });
     $('#form').on('submit', function(e){
@@ -19,23 +39,26 @@
        send();
     });
     $('#close_chat_btn').on('click', function(){
-        $('#chat_wrap').hide().empty();
+        $('.chat_header').hide().empty();
     });
     function send(){
         $('#divbox').append('<div class="msg_box send"><span>'+$('#input1').val()+'<span></div>');
+        document.getElementById('useragent1').value = useragent1.toString()
         $("#divbox").scrollTop($("#divbox")[0].scrollHeight);
-{#        console.log("serial"+$('form').serialize())#}
+        console.log("serial"+$('form').serialize())
         $.ajax({
-            url:  'http://127.0.0.1:8000/web_news/',
+            url: 'http://140.238.19.16/chat_service/',
             type: 'post',
             dataType: 'json',
             data: $('form').serialize(),
             success: function(data) {
-                <!--$('#reponse').html(data.reponse);-->
-                $('#divbox').append('<div class="msg_box receive"><span>'+data.reponse+'<span></div>');
+                $('#response').html(data.response);
+                $('#divbox').append('<div class="msg_box receive"><span>'+ data.response +'<span></div>');
                 $("#divbox").scrollTop($("#divbox")[0].scrollHeight);
             }
         });
         $('#input1').val('');
     }
 </script>
+</body>
+</html>
