--- a/templates/addresses/chat_service.html
+++ b/templates/addresses/chat_service.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<meta name="viewport" content="width=device-width,initial-scale=1">
 <html lang="ko">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" name="viewport" content="width=device-width,initial-scale=1">
     <title>시흥은행중학교 3학년 과학 질문-답변 챗봇 (테스트 중 20210207)</title>
     {% load static %}
     <link rel="shortcut icon" type="image/png" href="{% static '/favicon.ico' %}"/>
