--- a/templates/addresses/chat_service.html
+++ b/templates/addresses/chat_service.html
@@ -8,11 +8,11 @@
     <link rel="shortcut icon" type="image/png" href="{% static '/favicon.ico' %}"/>
 </head>
 <style>
-    .chat_content {height:95%; width:100%; overflow-y:scroll; padding:10px 15px; background:cornflowerblue}
-    .chat_input {padding:2px 5px;}
+    .chat_content {height:500px; width:100%; overflow-y:scroll; padding:10px 15px; background:cornflowerblue}
+    .chat_input {width:95%; height:20px; padding:2px 5px;}
     .chat_header {width:100%; padding:10px 15px; border-bottom:1px solid #95a6b4;}
     .chat_header .close_btn {border:none; background:none; float:right;}
-    .send_btn {border:1px solid #666; background:#ffeb33; height:5%; color:#0a0a0a;}
+    .send_btn {border:1px solid #666; background:#ffeb33; width:5%; height:20px; color:#0a0a0a;}
     .msg_box:after {content:''; display:block; clear:both;}
     .msg_box > span {padding:3px 5px; word-break:break-all; display:block; max-width:300px; margin-bottom:10px; border-radius:4px}
     .msg_box.send > span {background:#ffeb33; float:right;}
