--- a/templates/addresses/chat_service.html
+++ b/templates/addresses/chat_service.html
@@ -8,11 +8,11 @@
     <link rel="shortcut icon" type="image/png" href="{% static '/favicon.ico' %}"/>
 </head>
 <style>
-    .chat_content {height:500px; width:100%; overflow-y:scroll; padding:10px 15px; background:cornflowerblue}
-    .chat_input {width:95%; height:20px; padding:2px 5px;}
-    .chat_header {width:100%; padding:10px 15px; border-bottom:1px solid #95a6b4;}
+    .chat_content {height:500px; width:400px; overflow-y:scroll; padding:10px 15px; background:cornflowerblue}
+    .chat_input {width:360px; height:20px; padding:2px 5px;}
+    .chat_header {width:400px; padding:10px 15px; border-bottom:1px solid #95a6b4;}
     .chat_header .close_btn {border:none; background:none; float:right;}
-    .send_btn {border:1px solid #666; background:#ffeb33; width:5%; height:20px; color:#0a0a0a;}
+    .send_btn {border:1px solid #666; background:#ffeb33; width:40px; height:20px; color:#0a0a0a;}
     .msg_box:after {content:''; display:block; clear:both;}
     .msg_box > span {padding:3px 5px; word-break:break-all; display:block; max-width:300px; margin-bottom:10px; border-radius:4px}
     .msg_box.send > span {background:#ffeb33; float:right;}
@@ -25,7 +25,7 @@
 </div>
 <div id="divbox" class="chat_content"></div>
 <form id="form" style="display:inline">
-    <input type="text" name="input1" class="chat_input" id="input1" size="74" style="display:inline; width:460px;" placeholder="질문을 6글자 이상 최대한 자세하게 쓰세요"/>
+    <input type="text" name="input1" class="chat_input" id="input1" size="74" style="display:inline; width:360px;" placeholder="질문을 6글자 이상 최대한 자세하게 쓰세요"/>
     <input type="button" value="전송" id="btn_submit" class="send_btn" style="display:inline; width:40px;" />
     <input type="hidden" name="useragent1" id="useragent1" value="">
 </form>
