--- a/templates/addresses/chat_service.html
+++ b/templates/addresses/chat_service.html
@@ -8,25 +8,26 @@
     <link rel="shortcut icon" type="image/png" href="{% static '/favicon.ico' %}"/>
 </head>
 <style>
-    .chat_content {height:400px; width:400px; overflow-y:scroll; padding:10px 15px; background:cornflowerblue}
-    .chat_input {padding:2px 5px;}
-    .chat_header {width:400px; padding:10px 15px; border-bottom:1px solid #95a6b4;}
+    html,body {width:100%; height:100%; overflow:hidden}
+    .chat_content {width:100%; height:60vh; overflow-y:scroll; padding: 1vh 1vh; background:cornflowerblue;}
+    .chat_input {width:80%; height:4vh;}
+    .chat_header {width:100%; padding:1vh 1vh; border-bottom:1vh solid #95a6b4;}
     .chat_header .close_btn {border:none; background:none; float:right;}
-    .send_btn {border:1px solid #666; background:#ffeb33; height:20px; color:#0a0a0a;}
+    .send_btn {width:15%; height:4vh; border:0.3vh solid #666; background:#ffeb33; color:#0a0a0a;}
     .msg_box:after {content:''; display:block; clear:both;}
-    .msg_box > span {padding:3px 5px; word-break:break-all; display:block; max-width:300px; margin-bottom:10px; border-radius:4px}
+    .msg_box > span {padding:1vh 1vh; word-break:break-all; display:block; max-width:70%; margin-bottom:2vh; border-radius:2vh}
     .msg_box.send > span {background:#ffeb33; float:right;}
     .msg_box.receive > span {background:#fff; float:left;}
 </style>
 <body>
 <div class="chat_header">
-    <span>여러분이 질문을 많이 할수록 성능이 좋아집니다. 질문하시면 제가 시간 날 때 틈틈이 업데이트해요. 챗봇으로 해결이 안 되면 건 클래스팅 댓글이나 1:1 채팅으로 질문하세요. 질문과 시각만 수집하고 개인정보는 전혀 기록하지 않아요.</span>
+    <span>여러분이 질문을 많이 할수록 성능이 좋아집니다.<br/>질문하시면 제가 시간 날 때 틈틈이 업데이트해요.<br/>해결이 안 되는 건 게시판이나 채팅에서 질문하세요.<br/>질문과 시각만 수집하고 개인정보는 전혀 기록하지 않아요.</span>
     <button type="button" id="close_chat_btn" class="close_btn">X</button>
 </div>
 <div id="divbox" class="chat_content"></div>
 <form id="form" style="display:inline">
-    <input type="text" name="input1" class="chat_input" id="input1" size="74" style="display:inline; width:370px;" placeholder="질문을 6글자 이상 최대한 자세하게 쓰세요"/>
-    <input type="button" value="전송" id="btn_submit" class="send_btn" style="display:inline; width:40px;" />
+    <input type="text" name="input1" class="chat_input" id="input1" style="display:inline;" placeholder="질문을 6글자 이상 최대한 자세하게 쓰세요"/>
+    <input type="button" value="전송" id="btn_submit" class="send_btn" style="display:inline;" />
     <input type="hidden" name="useragent1" id="useragent1" value="">
 </form>
 <script>
