--- a/templates/addresses/chat_service.html
+++ b/templates/addresses/chat_service.html
@@ -2,12 +2,13 @@
 <html lang="ko">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <head>
-    <meta charset="UTF-8" name="viewport" content="width=device-width,initial-scale=1">
+    <meta charset="UTF-8" name="viewport" content="width=device-width, height=device-height, initial-scale=1">
     <title>시흥은행중학교 3학년 과학 질문-답변 챗봇 (테스트 중 20210207)</title>
     {% load static %}
     <link rel="shortcut icon" type="image/png" href="{% static '/favicon.ico' %}"/>
 </head>
 <style>
+    * {margin:0; padding:0}
     html,body {width:100%; height:100%; overflow:hidden}
     .chat_content {width:100%; height:60vh; overflow-y:scroll; padding: 1vh 1vh; background:cornflowerblue;}
     .chat_input {width:80%; height:4vh;}
