--- a/templates/addresses/chat_service.html
+++ b/templates/addresses/chat_service.html
@@ -11,7 +11,7 @@
     * {margin:0; padding:0}
     html,body {width:100%; height:100%; overflow:hidden}
     .chat_content {width:95%; height:60vh; overflow-y:scroll; padding: 1vh 1vh; background:cornflowerblue;}
-    .chat_input {width:75%; height:4vh;}
+    .chat_input {width:80%; height:4vh;}
     .chat_header {width:95%; padding:1vh 1vh; border-bottom:0.2vh solid #95a6b4;}
     .chat_header .close_btn {border:none; background:none; float:right;}
     .send_btn {width:15%; height:4vh; border:0.3vh solid #666; background:#ffeb33; color:#0a0a0a;}
@@ -23,7 +23,7 @@
 <body>
 <div class="chat_header">
     <button type="button" id="close_chat_btn" class="close_btn">X</button>
-    <span>여러분이 질문을 많이 할수록 성능이 좋아집니다.<br/>질문하시면 제가 시간 날 때 틈틈이 업데이트해요.<br/>해결이 안 되는 건 게시판이나 채팅에서 질문하세요.<br/>질문과 시각만 수집하고 개인정보는 전혀 기록하지 않아요.</span>
+    <span>여러분이 질문을 많이 할수록 성능이 좋아집니다.<br/>질문하시면 제가 시간 날 때 틈틈이 업데이트해요.<br/>해결이 안 되는 건 게시판이나 채팅에서 질문하세요.<br/>질문과 시각만 수집하고 개인정보는 기록하지 않아요.</span>
 </div>
 <div id="divbox" class="chat_content"></div>
 <form id="form" style="display:inline">
