챗봇 업데이트 20 (반응형 웹페이지 얼추 완성함 20210301)

--- a/templates/addresses/chat_service.html
+++ b/templates/addresses/chat_service.html
@@ -42,6 +42,7 @@
     });
     $('#close_chat_btn').on('click', function(){
         $('.chat_header').hide().empty();
+        $('.chat_content').height(96vh);
     });
     function send(){
         $('#divbox').append('<div class="msg_box send"><span>'+$('#input1').val()+'<span></div>');
