--- a/templates/addresses/chat_service.html
+++ b/templates/addresses/chat_service.html
@@ -42,7 +42,7 @@
     });
     $('#close_chat_btn').on('click', function(){
         $('.chat_header').hide().empty();
-        $('.chat_content').height(96vh);
+        $('.chat_content').height($(window).height()*0.725);
     });
     function send(){
         $('#divbox').append('<div class="msg_box send"><span>'+$('#input1').val()+'<span></div>');
