챗봇 업데이트 22 (개발환경 생김 20210307)

--- a/templates/addresses/chat_test.html
+++ b/templates/addresses/chat_test.html
@@ -47,7 +47,7 @@
         $("#divbox").scrollTop($("#divbox")[0].scrollHeight);
         console.log("serial"+$('form').serialize())
         $.ajax({
-            url: 'http://140.238.19.16:8000/chat_test/',
+            url: 'http://localhost:8000/chat_test/',
             type: 'post',
             dataType: 'json',
             data: $('form').serialize(),
